testing/tests/ui/illegal-string-literals.stderr
error: unclosed or broken string
 --> <source attribute>:1:3
       "\"hello world }}"
 --> tests/ui/illegal-string-literals.rs:6:34
  |
6 | #[template(ext = "txt", source = r#"{{ "hello world }}"#)]
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed or broken string
 --> <source attribute>:1:3
       "\"hello world\\\" }}"
  --> tests/ui/illegal-string-literals.rs:10:34
   |
10 | #[template(ext = "txt", source = r#"{{ "hello world\" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed or broken string
 --> <source attribute>:1:3
       "b\"hello world }}"
  --> tests/ui/illegal-string-literals.rs:14:34
   |
14 | #[template(ext = "txt", source = r#"{{ b"hello world }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed or broken string
 --> <source attribute>:1:3
       "b\"hello world\\\" }}"
  --> tests/ui/illegal-string-literals.rs:18:34
   |
18 | #[template(ext = "txt", source = r#"{{ b"hello world\" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed or broken string
 --> <source attribute>:1:3
       "c\"hello world }}"
  --> tests/ui/illegal-string-literals.rs:22:34
   |
22 | #[template(ext = "txt", source = r#"{{ c"hello world }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed or broken string
 --> <source attribute>:1:3
       "c\"hello world\\\" }}"
  --> tests/ui/illegal-string-literals.rs:26:34
   |
26 | #[template(ext = "txt", source = r#"{{ c"hello world\" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: out of range hex escape
 --> <source attribute>:1:3
       "\"hello \\x80 world\" }}"
  --> tests/ui/illegal-string-literals.rs:32:34
   |
32 | #[template(ext = "txt", source = r#"{{ "hello \x80 world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: out of range hex escape
 --> <source attribute>:1:3
       "\"hello \\xff world\" }}"
  --> tests/ui/illegal-string-literals.rs:36:34
   |
36 | #[template(ext = "txt", source = r#"{{ "hello \xff world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unclosed or broken string
 --> <source attribute>:1:3
       "\"hello \\u{128521} world\" }}"
  --> tests/ui/illegal-string-literals.rs:64:34
   |
64 | #[template(ext = "txt", source = r#"{{ "hello \u{128521} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:4
       "hello \\u{d83d}\\u{de09} world\" }}"
  --> tests/ui/illegal-string-literals.rs:70:34
   |
70 | #[template(ext = "txt", source = r#"{{ "hello \u{d83d}\u{de09} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:4
       "hello \\u{d83d} world\" }}"
  --> tests/ui/illegal-string-literals.rs:74:34
   |
74 | #[template(ext = "txt", source = r#"{{ "hello \u{d83d} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:4
       "hello \\u{de09} world\" }}"
  --> tests/ui/illegal-string-literals.rs:78:34
   |
78 | #[template(ext = "txt", source = r#"{{ "hello \u{de09} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:5
       "hello \\u{d83d}\\u{de09} world\" }}"
  --> tests/ui/illegal-string-literals.rs:82:34
   |
82 | #[template(ext = "txt", source = r#"{{ b"hello \u{d83d}\u{de09} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:5
       "hello \\u{d83d} world\" }}"
  --> tests/ui/illegal-string-literals.rs:86:34
   |
86 | #[template(ext = "txt", source = r#"{{ b"hello \u{d83d} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:5
       "hello \\u{de09} world\" }}"
  --> tests/ui/illegal-string-literals.rs:90:34
   |
90 | #[template(ext = "txt", source = r#"{{ b"hello \u{de09} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:5
       "hello \\u{d83d}\\u{de09} world\" }}"
  --> tests/ui/illegal-string-literals.rs:94:34
   |
94 | #[template(ext = "txt", source = r#"{{ c"hello \u{d83d}\u{de09} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:5
       "hello \\u{d83d} world\" }}"
  --> tests/ui/illegal-string-literals.rs:98:34
   |
98 | #[template(ext = "txt", source = r#"{{ c"hello \u{d83d} world" }}"#)]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unicode escape must not be a surrogate
 --> <source attribute>:1:5
       "hello \\u{de09} world\" }}"
   --> tests/ui/illegal-string-literals.rs:102:34
    |
102 | #[template(ext = "txt", source = r#"{{ c"hello \u{de09} world" }}"#)]
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a bare CR (Mac linebreak) is not allowed in string literals, use NL (Unix linebreak) or CRNL (Windows linebreak) instead, or type `\r` explicitly
 --> <source attribute>:1:4
       "hello \r world\" }}"
   --> tests/ui/illegal-string-literals.rs:109:34
    |
109 | #[template(ext = "txt", source = "{{ \"hello \r world\" }}")]
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a bare CR (Mac linebreak) is not allowed in string literals, use NL (Unix linebreak) or CRNL (Windows linebreak) instead, or type `\r` explicitly
 --> <source attribute>:1:5
       "hello \r world\" }}"
   --> tests/ui/illegal-string-literals.rs:113:34
    |
113 | #[template(ext = "txt", source = "{{ b\"hello \r world\" }}")]
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a bare CR (Mac linebreak) is not allowed in string literals, use NL (Unix linebreak) or CRNL (Windows linebreak) instead, or type `\r` explicitly
 --> <source attribute>:1:5
       "hello \r world\" }}"
   --> tests/ui/illegal-string-literals.rs:117:34
    |
117 | #[template(ext = "txt", source = "{{ c\"hello \r world\" }}")]
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
